<resources>
    <string name="app_name">TakeAway</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="category_resturants">resturants</string>
    <string name="FirstTitle">Your favorite food is where you are ...</string>
    <string name="checkedlangauge"> R.id.englanguage </string>
    <string name="selectlangauge"> Select the language </string>
    <string name="notifyme">Notifications</string>
    <string name="welcome">Hello!</string>
    <string name="ResturantnbyRegions">Resturants by Regions</string>
    <string name="LastOrder">Last Orders</string>
    <string name="Resturantnbyoffers">Resturants by offers</string>
    <string name="CookingCatName"> CookingCatNameEN </string>
    <string name="OrderStatus"> OrderStatus_En </string>
    <string name="findresturantbymap"> search by map </string>
    <string name="Search"> Search </string>

    <string name="City">City </string>
    <string name="Area">Area </string>
    <string name="Country">Country</string>
    <string name="FindResturants">Search Resturants</string>
    <string name="selectancity"> select the city </string>
    <string name="selectanarea"> select an area </string>
    <string name="CountryName"> CountryNameEn </string>
    <string name="cityname"> CityEn </string>
    <string name="areaname"> RegionEn </string>
    <string name="Restaurantsearch">search here ....</string>
    <string name="RestaurantnameAsc">Ascending by name</string>
    <string name="RestaurantnameDsc">Descending by name</string>
    <string name="RestaurantrateDsc">Descending by rate</string>
    <string name="RestaurantrateAsc">Ascending by rate</string>
    <string name="Resturantsarefound"> Resturants are found</string>
    <string name="ConnectingServer"> Connecting Server </string>
    <string name="Loading"> Loading Resturants... </string>

    <string name="Offer">Offer</string>


    <string name="Restaurantname">RestNameEn</string>
    <string name="RestDataname">RestDatanameEn</string>
    <string name="minchargerest">min charge </string>
    <string name="deliveryrest">delivery fee</string>

    <string name="RestaurantDescrption">RestaurantDescrptionEn</string>
    <string name="OpenOrClose">OpenorCloseEn</string>
    <string name="DeliveryWay">DeliveryWayNameEn</string>
    <string name="FeeType">FeeTypeEn</string>
    <string name="PayWayName">PayWayNameEn</string>


    <!-- filtration-->
    <string name="filterby">filter by</string>
    <string name="NameAsc">NameAsc</string>
    <string name="NameDesc">NameDesc</string>
    <string name="RateAsc">RateAsc</string>
    <string name="RateDesc">RateDesc</string>


    <!-- translate name for category activity [CHAR LIMIT=20] -->
    <string name="Menulist">Menu List</string>
    <string name="Menu">Menu </string>
    <string name="Reviews">Reviews </string>
    <string name="ResturantInformation">Resturant Information </string>
    <string name="ItemFood">ItemFoodEg</string>
    <string name="OfferType">OfferTypeEn</string>
    <string name="Price">Price : </string>
    <string name="newprice"> new price :</string>

    <string name="FeePrice"> Delivery Fee  :</string>

    <string name="OpenOrClosetxt">statu        </string>
    <string name="PayWaytxt">Pay Way    </string>
    <string name="DeliveryWaytxt">Delivery Way    </string>
    <string name="FeeTypetxt"> Fee Type</string>
    <string name="PayWayNametxt">Pay Way </string>
    <string name="FeeTypeValuetxt"> Fee Type Value </string>
    <string name="qualitytxt"> quality</string>
    <string name="pricevsvaluetxt"> price vs value </string>
    <string name="deliverytimetxt"> delivery time </string>

    <string name="putreview">  put your review </string>
    <string name="qualtity"> qualtity : </string>
    <string name="pricevsvalue">price Vs value :</string>
    <string name="deliverytime">deliverytime : </string>
    <!-- translate name for ItemDetails activity [CHAR LIMIT=20] -->

    <string name="addtochart">Add To Chart</string>

    <string name="Fooditemsdetails">Items details</string>
    <string name="ViewOrderdetails">Order details</string>
    <string name="LastOrderdetails">Last Orders</string>
    <string name="PlaceOrder"> Place Order</string>
    <string name="Addressinformation"> Address information</string>

    <string name="quantity">quantity</string>
    <string name="TotalPrice"> TotalPrice :</string>
    <string name="submitorder"> submit order </string>
    <string name="saveandaddmore">save and add more </string>
    <string name="submit"> submit </string>
    <string name="SAR">  SAR</string>
    <string name="minpurchases">  purchases value must be more than minimum charge</string>


    <string name="thanks"> Thanks for using takeaway app</string>
    <string name="laststring"> The restaurant will deliver food as soon as possible, but there may be delay due to prayer time
 </string>
    <string name="Addaddress">Add address</string>
    <string name="puturaddresshere">put your address here   </string>
    <string name="Address"> Address</string>


    <string name="writeyourqualityreviewhere"> write your quality review here</string>
    <string name="writeyourpricereviewhere"> write your  price review here</string>
    <string name="writeyourdeliveryreviewhere"> write your delivery review here </string>
    <string name="PostReviews"> Post Reviews</string>


    <string name="title_activity_maps">Map</string>
    <string name="emailreq">username is required</string>
    <string name="passreq">Password is required!</string>
    <string name="contactreq">Contact Email is required!</string>
    <string name="contactnamereq">Contact Name is required!</string>
    <string name="phonereq">Your phone number is required</string>
    <string name="passmatch">Passwords is not matched !</string>

    <string name="Getlocation">Get My location</string>

    <string name="addnewaddress"> Add new address</string>
    <string name="GetnewCobon">Get new cobon </string>

    <string name="location">location </string>
    <string name="region">region </string>
    <string name="AddressView">Address View </string>


    <!--// login and register-->

    <string name="Login">Login </string>
    <string name="SignUp">SignUp </string>
    <string name="Username">User name </string>
    <string name="contactphone">Contact Phone </string>
    <string name="Password">Password </string>
    <string name="EmailAddress">Email Address </string>
    <string name="contactname">Contact Name </string>
    <string name="confirmPassword">confirm Password </string>
    <string name="Register">Register </string>
    <string name="AlreadyHaveAnAccount">Already Have An Account ! Login </string>

    <string name="Counter">Counter</string>

</resources>
