<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_resturantoffer"
            android:orderInCategory="100"
            android:icon="@drawable/home"
            android:title="@string/Resturantnbyoffers"
            />
        <item
            android:id="@+id/action_cobon"
            android:orderInCategory="100"
            android:icon="@drawable/home"
            android:title="@string/GetnewCobon"
            />
    </group>

    <!--<classCategory android:checkableBehavior="single">-->

        <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/sitting"-->
        <!--android:title="@string/action_settings"-->
        <!--/>-->

    <!--</classCategory>-->


    <item android:title="@string/action_settings">
        <menu>

            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:icon="@drawable/sitting"
                android:title="@string/action_settings"
                 />
            <!--android:title="Share" />-->
            <item
                android:id="@+id/action_home"
                android:orderInCategory="100"
                android:icon="@drawable/home"
                android:title="@string/action_home"
                />

        </menu>
    </item>

</menu>
