<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.srccode.takeawayproject.ActivityClientReview">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarlayoutid"/>
    <TextView
        android:text="@string/pricevsvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="84dp"
        android:textColor="#000"
        android:id="@+id/textView9"
        />

    <TextView
        android:text="@string/qualtity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="51dp"
        android:id="@+id/textView8"
        android:textColor="#000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:id="@+id/ratingBarquality"

        />
    <!--android:backgroundTint="#FF8342"-->
    <!--android:progressTint="#FF8342"-->
    <!--android:progressBackgroundTint="#FF8342"-->
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBarquality"
        android:layout_alignEnd="@+id/ratingBarquality"
        android:layout_marginTop="44dp"
        android:id="@+id/ratingBarprice" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBarprice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="69dp"
        android:id="@+id/ratingBardelivery" />

    <TextView
        android:text="@string/deliverytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/textView10"
        android:textColor="#000"
        android:layout_alignTop="@+id/ratingBardelivery"
        android:layout_alignStart="@+id/textView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writeyourqualityreviewhere"
        android:id="@+id/editquality"
        android:layout_below="@+id/ratingBarquality"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writeyourpricereviewhere"
        android:layout_below="@+id/ratingBarprice"
        android:layout_alignStart="@+id/editquality"
        android:id="@+id/editprice" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/writeyourdeliveryreviewhere"
        android:id="@+id/editdelivery"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/ratingBardelivery"
        android:layout_alignStart="@+id/editprice"
        />

    <Button
        android:text="@string/PostReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_place_order_style"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/editdelivery"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginTop="44dp"
        android:id="@+id/postreview" />
</RelativeLayout>
