<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:background="#f9f3f3"
    android:gravity="center_horizontal"
    tools:context="com.example.srccode.takeawayproject.Activities.ActivityPlaceOrder">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adresstxtid"
        android:text=""
        android:layout_marginTop="15dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:divider="#fff"
            android:dividerHeight="1dp"
            android:scrollbars="vertical"/>
            <!--<ListView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/placeorderlist"-->
                <!--android:divider="#f9f3f3"-->
                <!--android:dividerHeight="5dp"-->
                <!--android:scrollbars="vertical"/>-->
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:id="@+id/orderview3"
                />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/linearplaceFee"
            android:layout_below="@+id/linearplaceorder"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FeePrice"
                android:textColor="#000"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeorderFeeprice"
                android:text="150 SR"
                android:textColor="#000"
                android:layout_gravity="center"
                />
            <!--</RelativeLayout>-->

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:id="@+id/linearplaceprice"
            android:layout_below="@+id/linearplaceorder"
            android:background="@drawable/arest_header_style"
            android:layout_gravity="center"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalPrice"
                android:textColor="#000"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeordertotalprice"
                android:text="150 SR"
                android:textColor="#000"
                android:layout_gravity="center"
                />


        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_margin="16dp"
            android:text="@string/submit"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_place_order_style"
            />
    </LinearLayout>
</ScrollView>
